src/test/ui/consts/miri_unleashed/mutable_const.stderr
warning: skipping const checks
  --> $DIR/mutable_const.rs:14:9
   |
LL |         *MUTABLE_BEHIND_RAW = 99
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

error: any use of this value will cause an error
  --> $DIR/mutable_const.rs:14:9
   |
LL | / const MUTATING_BEHIND_RAW: () = {
LL | |     // Test that `MUTABLE_BEHIND_RAW` is actually immutable, by doing this at const time.
LL | |     unsafe {
LL | |         *MUTABLE_BEHIND_RAW = 99
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^ tried to modify constant memory
...  |
LL | |     }
LL | | };
   | |__-
   |
note: lint level defined here
  --> $DIR/mutable_const.rs:4:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: aborting due to previous error

